# compress3d

./: CMakeLists.txt
include/: compress3d.h
src/: c3d_net.c  c3d_octree.c  compress3d.c
tests/: CMakeLists.txt  test_advanced.c  test_compress3d.c  test_metrics.c  test_multiscale.c  test_octree.c  test_shard.c  test_udp.c
tools/: analyze_data.c  octree_test.c  ratio_sweep.c  scroll_report.c
